--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>springboot-backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>springboot-backend</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Demo project for Spring Boot webhook</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -50,18 +50,6 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-      <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-      <version>1.18.22</version>
-      <scope>provided</scope>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
-    <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-classic</artifactId>
-      <version>1.2.3</version>
-    </dependency>
 	</dependencies>
 
 	<build>
